# dataframe-generator

./: LICENSE  README.md  pyproject.toml
dataframe_generator/: StructField.py  __main__.py  data_type.py  generator.py  generators.py  main.py  outputter.py  struct_field.py  struct_type.py
dataframe_generator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: matchers.py  test_dataframe_generator.py  test_generator.py  test_struct_field.py  test_struct_type.py
