[tool.poetry]
name = "dataframe-generator"
version = "0.1.0"
description = "A simple Python module for generating test CSV datasets from PySpark schemas."
authors = ["Szabolcs Vasas <vasas@apache.org>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
